cluster/apps/social/nginx-well-known/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-well-known
  namespace: social
  annotations:
    external-dns.home.arpa/enabled: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "${SECRET_DEV_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: nginx-well-known
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: *host
---
